project container flex-wrap and animation fix

--- a/src/index.css
+++ b/src/index.css
@@ -78,15 +78,16 @@ a:hover{
 }
 
 .projectsContainer{
-  width: 75%;
   margin: auto;
   margin-top: 50px;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .projectsTitle{
   font-size: 40px;
+  width: 75%;
   display: flex;
   justify-content: center;
 }
@@ -99,13 +100,14 @@ a:hover{
   box-shadow: 0 5px 16px 0px rgba(0,0,0,0.1);
   margin-left: 20px;
   margin-right: 20px;
+  margin-bottom: 40px;
   position: relative;
-  transition: margin 0.25s ease-in-out, box-shadow 0.25s ease-in-out, background-color 0.2s,
+  top: 0;
+  transition: top 0.25s ease-in-out, box-shadow 0.25s ease-in-out, background-color 0.2s,
 }
 
 .projectCard:hover{
-  margin-top: -12px;
-  margin-bottom: 12px;
+  top: -10px;
   box-shadow: 0 25px 16px 0px rgba(0,0,0,0.1);
 
 }
